sonarqube/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarqube
  name: sonarqube
  namespace: cicd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
        - name: sonarqube
          image: sonarqube:latest
          volumeMounts:
            - mountPath: "/opt/sonarqube/data/"
              name: sonarqube-pv-data
            - mountPath: "/opt/sonarqube/extensions/"
              name: sonarqube-pv-extensions
          ports:
            - containerPort: 9000
              protocol: TCP
      volumes:
        - name: sonarqube-pv-data
          persistentVolumeClaim:
            claimName: sonar-data
        - name: sonarqube-pv-extensions
          persistentVolumeClaim:
            claimName: sonar-extensions
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarqube
  name: sonarqube
  namespace: cicd
spec:
  ports:
    - name: sonar
      port: 80
      protocol: TCP
      targetPort: 9000
      nodePort: 32300
  selector:
    app: sonarqube
  type: NodePort
